# fill-free

./: .gitignore  .ignore  .nfs000000363f383cc500000359  .opencode.json  AGENTS.md  PRINCIPLES.md  README.md  README.zh-CN.md  config.toml.example  flake.nix  justfile  opencode.json  package-lock.json  package.json  pyproject.toml  secrets.toml.example  tsconfig.json  vitest.config.ts
.pi/: APPEND_SYSTEM.md
docs/: architecture.md  pi-mono-migration-plan.md  principles.md  refactor-plan.md  system-stores.md  tasks-positioning-audit.md
memory/: preferences.md
notes/: credentials_policy.md
scripts/: fill_research_worklog.py  network_time.py
system/: files.json
tests/: access-execution.test.ts  access-guard.test.ts  active-conversation-tasks.test.ts  ai-prompt.test.ts  assistant-context.test.ts  assistant-extended.test.ts  assistant-image-attachments.test.ts  assistant-scenarios.test.ts  assistant.test.ts  automations.test.ts  bot-scenarios.test.ts  conversation-controller.test.ts  events-cli.test.ts  events.test.ts  gateway-tools.test.ts  helpers.py  live-assistant.ts  messages.test.ts  nl-live.test.ts  nl-regression.test.ts  opencode-config.test.ts  pending-authorization.test.ts  pi-config.test.ts  reminders.test.ts  reply-composer.test.ts  responder-context.test.ts  responder.test.ts  run-scenario.ts  scheduled-task.test.ts  schedules-cli.test.ts  schedules.test.ts  startup-greeting.test.ts  telegram-format.test.ts  telegram-output.test.ts  telegram-transport.test.ts  test_checks.py  test_cli_contract.py  test_cli_rename_contract.py  test_frontmatter.py  (+8 more)
(+284 files in other folders)
