[project]
name = "memory-agent"
version = "0.1.0"
description = "🤖 Store once, fill anywhere — AI-powered personal info that completes forms for you"
readme = "README.md"
authors = [
    { name = "yang", email = "norepfy@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
memory-agent = "memory_agent:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
